# template.selenium

./: .gitattributes  README.md  my-selenium-app.py  pyproject.toml
chrome/117/: sample.py
chrome/117/chromium-117/: chrlauncher - source code.url
chrome/117/chromium-117/profile/: Local State
chrome/117/chromium-117/profile/Default/: DownloadMetadata  Favicons  History  Shortcuts  (+3 more)
chrome/web-manager/: sample.py
chrome/web_manager/: sample.py
chrome/win64-chrome-117/: sample.py
chrome/win64-chrome-117/chromium-117/: chrlauncher.exe.sig  chrlauncher.ini
chrome/win64-chrome-117/chromium-117/profile/: Last Version
chromium-117/: History.txt  chrlauncher - official website - donation.url
chromium-117/profile/: Last Browser
chromium-117/profile/Default/: DIPS  Secure Preferences
chromium-117/profile/Default/DawnCache/: index
chromium-117/profile/Default/Extension Rules/: LOG.old
chromium-117/profile/Default/GPUCache/: data_0  data_1  index
chromium-117/profile/Default/Network/: Network Persistent State
chromium-117/profile/Default/Safe Browsing Network/: Safe Browsing Cookies
chromium-117/profile/Default/Session Storage/: LOG
chromium-117/profile/Default/Sessions/: Tabs_13339359099626827
chromium-117/profile/Default/Site Characteristics Database/: LOG  LOG.old
chromium-117/profile/GrShaderCache/: f_000002  f_000004  index
chromium-117/profile/OnDeviceHeadSuggestModel/20230815.558564245.14/: manifest.json
chromium-117/profile/Safe Browsing/: UrlCsdDownloadAllowlist.store
chromium-117/profile/ShaderCache/: data_1
firefox/: main.py
(+215 files in other folders)
