[tool.poetry]
name = "selenium-templates"
version = "0.1.0"
description = ""
authors = ["rox87 <rodrigohbx@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
